FIX: Remove overflow: hidden in launch cards

--- a/src/main.css
+++ b/src/main.css
@@ -194,7 +194,6 @@
 .launches {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
 }
 .launches .card-container {
   display: grid;
