--- a/src/scss/_launchCard.scss
+++ b/src/scss/_launchCard.scss
@@ -2,7 +2,6 @@
 .launches{
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
 
     .card-container {
         display: grid;
